@@ -1,7 +1,7 @@
 buildscript {
     repositories {
-        maven { 
-            url 'https://esri.bintray.com/arcgis' 
+        maven {
+            url 'https://esri.bintray.com/arcgis'
         }
     }
     dependencies {
@@ -9,13 +9,22 @@ buildscript {
     }
 }
 
-apply plugin: 'application'
+plugins {
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.5'
+}
+
 apply plugin: 'com.esri.arcgisruntime.java'
+
+group = 'com.esri.samples'
 
 arcgis.version = '100.5.0-2307'
 arcgis.internal = true
 
-group = 'com.esri.samples'
+javafx {
+    version = "11.0.1"
+    modules = [ 'javafx.controls', 'javafx.web', 'javafx.fxml', 'javafx.swing' ]
+}
 
 compileJava.options.encoding = 'UTF-8'
 
@@ -30,15 +39,6 @@ dependencies {
     compile 'com.esri.arcgisruntime:arcgis-java-toolkit:100.2.1'
     compile 'commons-io:commons-io:2.4'
     compile 'org.jooq:joox:1.4.0'
-    ["win", "mac", "linux"].forEach { platform ->
-        compile "org.openjfx:javafx-base:11:$platform"
-        compile "org.openjfx:javafx-graphics:11:$platform"
-        compile "org.openjfx:javafx-controls:11:$platform"
-        compile "org.openjfx:javafx-web:11:$platform"
-        compile "org.openjfx:javafx-fxml:11:$platform"
-        compile "org.openjfx:javafx-swing:11:$platform"
-        compile "org.openjfx:javafx-media:11:$platform"
-    }
 }
 
 task downloadData {
@@ -59,23 +59,8 @@ task downloadData {
     }
 }
 
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.web,javafx.fxml'
-        ]
-    }
-}
-
 run {
     mainClassName = project.hasProperty("mainClass") ? mainClass : 'com.esri.samples.map.display_map.DisplayMapSample'
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.web,javafx.fxml'
-        ]
-    }
 }
 
 jar {
